--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ header ul li a{
 }
 
 h2{
-    font-size: 2.5vw;
+    font-size: 48px;
     line-height: 72px;
     font-weight: bold;
     text-align: center;
