--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ img{
 .wrap{
     max-width: 1920px;
     margin: 0 auto;
+    font-family: "roboto", "Noto Sans TC", "serif";
 }
 
 header{
@@ -525,4 +526,12 @@ hr{
     color: #FFFFFF;
     font-size: 14px;
     line-height: 21px;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
 }
