--- a/style.css
+++ b/style.css
@@ -386,10 +386,15 @@ max-width: 306px;
 
 .contact{
     background: #FBF2F2;
-    padding: 80px 33.4375%;
+    padding: 80px 0;
 }
 
-.contact > h2{
+.contact > div{
+    margin: 0 auto;
+    width: 636px
+}
+
+.contact h2{
     font-size: 48px;
     line-height: 72px;
     font-weight: bold;
@@ -406,38 +411,53 @@ max-width: 306px;
     margin-bottom: 24px;
 }
 
-.question{
+.question, label{
+    display: block;
     font-size: 16px;
     line-height: 24px;
     color:#000000;
     margin-bottom: 8px;
 }
 
-.answer{
+.answer, textarea, input{
     width: 636px;
     font-size: 16px;
     line-height: 24px;
-    color: rgba(00, 00, 00, 0.2);
     border: 1px solid #000000;
     padding: 6px 0 6px 12px;
     margin-bottom: 16px;
     background: #FBF2F2;
 }
 
+::placeholder{
+    color: rgba(00, 00, 00, 0.2);
+}
+
 .long{
     height: 136px;
 }
 
-.privacy{
-    font-size: 16px;
-    line-height: 24px;
-    margin-bottom: 48px;
-    width: initial;
+textarea{
+    height: 136px;
+    resize: none;
+}
+
+input[name="checkbox"]{
+    display: inline;
+    width: 24px;
+    height: 24px;
+    margin:0;
+}
+
+label[for="checkbox"]{
+    display: inline;
+    vertical-align:super;
+    margin-left: 4px;
 }
 
 .contact a{
     width: 416px;
-    margin: 0 auto;
+    margin: 48px auto 0;
     font-size: 16px;
     line-height: 24px;
     color: #FFFFFF;
@@ -528,10 +548,3 @@ hr{
     line-height: 21px;
 }
 
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
-}
