--- a/style.css
+++ b/style.css
@@ -328,17 +328,16 @@ h2{
 
 .section5{
     background: #FFFFFF;
-    padding: 80px 0;
-}
-
-.section5 > h2{
-    color: #650300;
-    margin-bottom: 48px;
 }
 
 .section5 > div{
-margin: 0 auto;
-padding: 0 312px;
+    max-width: 1296px;
+    margin: 80px auto;
+}
+
+.section5  h2{
+    color: #650300;
+    margin-bottom: 48px;
 }
 
 .section5 ul{
@@ -348,10 +347,15 @@ padding: 0 312px;
 }
 
 .section5 li{
-    max-width: 306px;
+    max-width: 25%;
 }
 
-.section5 ul li > div{
+.section5 img{
+    width:100%;
+    height: auto;
+}
+
+.comment-content{
     max-width: 306px;
     height: 205px;
     padding: 16px;
