--- a/style.css
+++ b/style.css
@@ -273,7 +273,19 @@ h2{
 
 .section4{
     background:url(https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/index-bg.png?raw=true);
-    padding: 80px 16.25%;
+    background-size:cover;
+    background-position: center;
+    padding: 80px 40px;
+
+}
+
+.section4 li{
+    width: 50%;
+}
+
+.section4 > div{
+    max-width: 1296px;
+    margin: 0 auto;
 }
 
 @media (max-width:768px){
@@ -282,7 +294,7 @@ h2{
     }
 }
 
-.section4 > h2{
+.section4 h2{
     color: #FFFFFF;
     margin-bottom: 48px;
 }
@@ -291,25 +303,29 @@ h2{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 .section4 .picture1{
-    width: 648px;
+    max-width: 100%;
     height: 240px;
     background: url(https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-1.png?raw=true);
-    background-size: contain;
+    background-size:cover;
+    background-position: center;
+
 }
 
 .section4 .picture2{
-    width: 648px;
+    max-width: 100%;
     height: 240px;
     background: url(https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-2.png?raw=true);
-    background-size: contain;
+    background-size: cover;
+    background-position: center;
 }
 
 
 .section4 li p{
-    width: 648px;
+    width: 100%;
     color: #AA0601;
     background: #FFFFFF;
     font-size: 48px;
