--- a/style.css
+++ b/style.css
@@ -73,17 +73,23 @@ img{
 }
 
 header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    
     background: #AA0601;
-    padding: 0 16.25%;
+    padding: 0 40px;
 }
 
 @media (max-width: 768px){
     header{
         padding: 0 36px;
     }
+}
+
+header > div{
+    max-width: 1296px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header img{
