--- a/style.css
+++ b/style.css
@@ -208,16 +208,16 @@ h2{
     flex-wrap: wrap;
 }
 
-.section2 img{
-    width: 100px;
-    margin-bottom: 16px;
-}
-
 .section2 li{
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 23.6111%
+}
+
+.section2 img{
+    width: 100px;
+    margin-bottom: 16px;
 }
 
 .feature{
@@ -292,22 +292,17 @@ h2{
     background-size:cover;
     background-position: center;
     padding: 80px 40px;
-
-}
-
-.section4 li{
-    width: 50%;
-}
-
-.section4 > div{
-    max-width: 1296px;
-    margin: 0 auto;
 }
 
 @media (max-width:768px){
     .section4{
         padding: 80px 36px;
     }
+}
+
+.section4 > div{
+    max-width: 1296px;
+    margin: 0 auto;
 }
 
 .section4 h2{
@@ -322,13 +317,16 @@ h2{
     align-items: center;
 }
 
+.section4 li{
+    width: 50%;
+}
+
 .section4 .picture1{
     max-width: 100%;
     height: 240px;
     background: url(https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-1.png?raw=true);
     background-size:cover;
     background-position: center center;
-
 }
 
 .section4 .picture2{
@@ -338,7 +336,6 @@ h2{
     background-size: cover;
     background-position: center center;
 }
-
 
 .section4 li p{
     width: 100%;
@@ -368,7 +365,7 @@ h2{
     margin: 80px auto;
 }
 
-.section5  h2{
+.section5 h2{
     color: #650300;
     margin-bottom: 48px;
 }
@@ -388,6 +385,10 @@ h2{
     height: auto;
 }
 
+.section5 img{
+    max-width: 306px;
+    }
+
 .comment-content{
     max-width: 306px;
     height: 205px;
@@ -396,10 +397,6 @@ h2{
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 0 2px 6px #00000029;
-}
-
-.section5 img{
-max-width: 306px;
 }
 
 .name{
@@ -413,12 +410,6 @@ max-width: 306px;
     color: #000000;
     font-size: 16px;
     line-height: 24px;
-}
-
-.buttom p{
-    color: #707070;
-    font-size: 14px;
-    line-height: 21px;
 }
 
 .contact{
@@ -448,7 +439,7 @@ max-width: 306px;
     margin-bottom: 24px;
 }
 
-.question, label{
+label{
     display: block;
     font-size: 16px;
     line-height: 24px;
@@ -456,7 +447,7 @@ max-width: 306px;
     margin-bottom: 8px;
 }
 
-.answer, textarea, input{
+textarea, input{
     width: 636px;
     font-size: 16px;
     line-height: 24px;
@@ -468,10 +459,6 @@ max-width: 306px;
 
 ::placeholder{
     color: rgba(00, 00, 00, 0.2);
-}
-
-.long{
-    height: 136px;
 }
 
 textarea{
@@ -532,6 +519,13 @@ footer > div{
     align-items: center;
 }
 
+.navbar a{
+    display: block;
+    color: #FFFFFF;
+    font-size: 16px;
+    line-height: 24px;
+}
+
 .sns-menu{
     width: 208px;
     display: flex;
@@ -543,24 +537,6 @@ footer > div{
     width: 48px;
     height: 48px;
 }
-
-.navbar a{
-    display: block;
-    color: #FFFFFF;
-    font-size: 16px;
-    line-height: 24px;
-}
-
-.top div{
-    width: 208px; 
-    display: flex;
-    justify-content: space-between;
-}
-
-.center img{
-    width: 48px;
-}
-
 
 .center p{
     display: inline-block;
