--- a/style.css
+++ b/style.css
@@ -5,86 +5,174 @@
 
 
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 /* *{
     outline: 1px solid #000;
 } */
 
-a{
+a {
     text-decoration: none;
 }
 
-img{
+img {
     max-width: 100%;
     height: auto;
 }
 
-*, *::before, *::after{
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
-.wrap{
+.wrap {
     max-width: 1920px;
     margin: 0 auto;
     font-family: "roboto", "Noto Sans TC", "serif";
 }
 
-header{
-    
+header {
     background: #AA0601;
-    padding: 0 40px;
+    padding: 0 36px;
 }
 
-@media (max-width: 768px){
-    header{
+@media (max-width: 768px) {
+    header {
         padding: 0 36px;
     }
 }
 
-header > div{
+header>div {
     max-width: 1296px;
     margin: 0 auto;
     display: flex;
@@ -92,17 +180,17 @@ header > div{
     align-items: center;
 }
 
-header img{
+header img {
     width: 80px;
 }
 
-header ul{
+header ul {
     display: flex;
     justify-content: space-between;
     width: 492px;
 }
 
-header ul li a{
+header ul li a {
     display: block;
     color: #FFFFFF;
     font-size: 20px;
@@ -111,23 +199,23 @@ header ul li a{
     margin-bottom: 25px;
 }
 
-.banner{
+.banner {
     max-width: 100%;
     height: 787px;
-    background: url(https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-header.png?raw=true) ;
-    background-size:cover;
+    background: url(https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-header.png?raw=true);
+    background-size: cover;
     background-position: center;
     position: relative;
 }
 
-@media (max-width: 768px){
-    .banner{
+@media (max-width: 768px) {
+    .banner {
         background: url(https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-header-sm.png?raw=true);
     }
-   
+
 }
 
-.line1{
+.line1 {
     position: absolute;
     top: 296px;
     right: 16.198%;
@@ -136,13 +224,13 @@ header ul li a{
     line-height: 54px;
 }
 
-@media (max-width: 768px){
-    .line1{
+@media (max-width: 768px) {
+    .line1 {
         right: 36px;
     }
 }
 
-.line2{
+.line2 {
     position: absolute;
     top: 360px;
     right: 16.25%;
@@ -151,13 +239,13 @@ header ul li a{
     line-height: 96px;
 }
 
-@media (max-width: 768px){
-    .line2{
+@media (max-width: 768px) {
+    .line2 {
         right: 37px;
     }
 }
 
-.buy-button{
+.buy-button {
     position: absolute;
     top: 450px;
     right: 16.25%;
@@ -168,59 +256,59 @@ header ul li a{
     background: #AA0601;
 }
 
-@media (max-width: 768px){
-    .buy-button{
+@media (max-width: 768px) {
+    .buy-button {
         right: 37px;
     }
 }
 
-h2{
+h2 {
     font-size: 48px;
     line-height: 72px;
     font-weight: bold;
     text-align: center;
 }
 
-.section2{
+.section2 {
     background: #FBF2F2;
-    padding: 80px 40px;
+    padding: 80px 36px;
 }
 
-@media (max-width:768px){
-    .section2{
+@media (max-width:768px) {
+    .section2 {
         padding: 80px 36px;
     }
 }
 
-.section2 > div{
+.section2>div {
     max-width: 1296px;
     margin: 0 auto;
 }
 
-.section2  h2{
+.section2 h2 {
     color: #650300;
     margin-bottom: 24px;
 }
 
-.section2  ul{
+.section2 ul {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-.section2 li{
+.section2 li {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 23.6111%
 }
 
-.section2 img{
+.section2 img {
     width: 100px;
     margin-bottom: 16px;
 }
 
-.feature{
+.feature {
     font-size: 24px;
     line-height: 36px;
     color: #650300;
@@ -228,57 +316,57 @@ h2{
     margin-bottom: 8px;
 }
 
-.section2 .description{
+.section2 .description {
     font-size: 16px;
     line-height: 24px;
     width: 100%;
 }
 
-.section3{
+.section3 {
     background: #FFFFFF;
-    padding: 80px 40px;
+    padding: 80px 36px;
 }
 
-@media (max-width:768px){
-    .section3{
+@media (max-width:768px) {
+    .section3 {
         padding: 80px 216px;
     }
 }
 
-.section3  h2{
+.section3 h2 {
     color: #650300;
     margin-bottom: 48px;
 }
 
-.section3 > div{
+.section3>div {
     max-width: 1296px;
     margin: 0 auto;
 }
 
-.section3 ul{
+.section3 ul {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 
 }
 
-.section3 li{
+.section3 li {
     width: 32.0987%;
 }
 
-.section3 img{
+.section3 img {
     width: 100%;
     margin-bottom: 8px;
 }
 
-@media (max-width:768px){
-    .section3 img{
+@media (max-width:768px) {
+    .section3 img {
         width: 336px;
     }
 }
 
 
-.section3 li p{
+.section3 li p {
     color: #AA0601;
     font-size: 2.5vw;
     line-height: 72px;
@@ -287,49 +375,49 @@ h2{
     text-align: center;
 }
 
-.section4{
-    background:url(https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/index-bg.png?raw=true);
-    background-size:cover;
+.section4 {
+    background: url(https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/index-bg.png?raw=true);
+    background-size: cover;
     background-position: center;
-    padding: 80px 40px;
+    padding: 80px 36px;
 }
 
-@media (max-width:768px){
-    .section4{
+@media (max-width:768px) {
+    .section4 {
         padding: 80px 36px;
     }
 }
 
-.section4 > div{
+.section4>div {
     max-width: 1296px;
     margin: 0 auto;
 }
 
-.section4 h2{
+.section4 h2 {
     color: #FFFFFF;
     margin-bottom: 48px;
 }
 
-.section4 ul{
+.section4 ul {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: center;
 }
 
-.section4 li{
+.section4 li {
     width: 50%;
 }
 
-.section4 .picture1{
+.section4 .picture1 {
     max-width: 100%;
     height: 240px;
     background: url(https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-1.png?raw=true);
-    background-size:cover;
+    background-size: cover;
     background-position: center center;
 }
 
-.section4 .picture2{
+.section4 .picture2 {
     max-width: 100%;
     height: 240px;
     background: url(https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-2.png?raw=true);
@@ -337,7 +425,7 @@ h2{
     background-position: center center;
 }
 
-.section4 li p{
+.section4 li p {
     width: 100%;
     color: #AA0601;
     background: #FFFFFF;
@@ -349,47 +437,47 @@ h2{
     padding: 8px 0;
 }
 
-@media (max-width:768px){
-    .section4 p{
+@media (max-width:768px) {
+    .section4 p {
         margin-bottom: 24px;
     }
 }
 
-.section5{
+.section5 {
     background: #FFFFFF;
-    padding: 0 40px;
+    padding: 0 36px;
 }
 
-.section5 > div{
+.section5>div {
     max-width: 1296px;
     margin: 80px auto;
 }
 
-.section5 h2{
+.section5 h2 {
     color: #650300;
     margin-bottom: 48px;
 }
 
-.section5 ul{
+.section5 ul {
     display: flex;
     justify-content: space-between;
     border-radius: 4px;
 }
 
-.section5 li{
+.section5 li {
     max-width: 25%;
 }
 
-.section5 img{
-    width:100%;
+.section5 img {
+    width: 100%;
     height: auto;
 }
 
-.section5 img{
+.section5 img {
     max-width: 306px;
-    }
+}
 
-.comment-content{
+.comment-content {
     max-width: 306px;
     height: 205px;
     padding: 16px;
@@ -399,30 +487,30 @@ h2{
     box-shadow: 0 2px 6px #00000029;
 }
 
-.name{
+.name {
     color: #000000;
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 8px;
 }
 
-.comment{
+.comment {
     color: #000000;
     font-size: 16px;
     line-height: 24px;
 }
 
-.contact{
+.contact {
     background: #FBF2F2;
     padding: 80px 0;
 }
 
-.contact > div{
+.contact>div {
     margin: 0 auto;
     width: 636px
 }
 
-.contact h2{
+.contact h2 {
     font-size: 48px;
     line-height: 72px;
     font-weight: bold;
@@ -431,7 +519,7 @@ h2{
     margin-bottom: 48px;
 }
 
-.contact .description{
+.contact .description {
     width: 636px;
     font-size: 20px;
     line-height: 30px;
@@ -439,15 +527,16 @@ h2{
     margin-bottom: 24px;
 }
 
-label{
+label {
     display: block;
     font-size: 16px;
     line-height: 24px;
-    color:#000000;
+    color: #000000;
     margin-bottom: 8px;
 }
 
-textarea, input{
+textarea,
+input {
     width: 636px;
     font-size: 16px;
     line-height: 24px;
@@ -457,29 +546,29 @@ textarea, input{
     background: #FBF2F2;
 }
 
-::placeholder{
+::placeholder {
     color: rgba(00, 00, 00, 0.2);
 }
 
-textarea{
+textarea {
     height: 136px;
     resize: none;
 }
 
-input[name="checkbox"]{
+input[name="checkbox"] {
     display: inline;
     width: 24px;
     height: 24px;
-    margin:0;
+    margin: 0;
 }
 
-label[for="checkbox"]{
+label[for="checkbox"] {
     display: inline;
-    vertical-align:super;
+    vertical-align: super;
     margin-left: 4px;
 }
 
-.contact a{
+.contact a {
     width: 416px;
     margin: 48px auto 0;
     font-size: 16px;
@@ -491,90 +580,57 @@ label[for="checkbox"]{
     text-align: center;
 }
 
-.contact a:hover{
+.contact a:hover {
     background: #650300;
 }
 
-footer{
+footer {
     background: #AA0601;
     padding: 0 40px;
 }
 
-footer > div{
+footer>div {
     max-width: 1296px;
     margin: 0 auto;
     padding: 48px 0 32px 0;
 }
 
-.top{
+.top {
     display: flex;
     justify-content: space-between;
     margin-bottom: 27px;
 }
 
-.navbar{
+.navbar {
     width: 484px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.navbar a{
+.navbar a {
     display: block;
     color: #FFFFFF;
     font-size: 16px;
     line-height: 24px;
 }
 
-.sns-menu{
+.sns-menu {
     width: 208px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;   
-}
-
-.sns-menu li{
-    width: 48px;
-    height: 48px;
-}
-
-.center p{
-    display: inline-block;
-    color: #FFFFFF;
-    font-size: 36px;
-    line-height: 54px;
-    vertical-align: top;
-    margin-left: 16px;
-    font-family: "Source Han Sans TW", "serif";
-}
-
-hr{
-    margin: 32px 0;
-}
-
-.bottom{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.bottom p{
-    font-size: 16px;
-    line-height: 24px;
-    color: #FFFFFF;
-}
-
-.bottom ul{
-    width: 174px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.bottom ul li a{
-    color: #FFFFFF;
-    font-size: 14px;
-    line-height: 21px;
+.sns-menu li {
+    width: 48px;
+    height: 48px;
+}
+
+.phone,
+.mail {
+    display: flex;
+    align-items: center;
 }
 
 .material-symbols-outlined {
@@ -583,7 +639,40 @@ hr{
     padding: 6px;
 }
 
-.phone, .mail{
+.center p {
+    display: inline-block;
+    color: #FFFFFF;
+    font-size: 36px;
+    line-height: 54px;
+    vertical-align: top;
+    margin-left: 16px;
+}
+
+hr {
+    margin: 32px 0;
+}
+
+.bottom {
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.bottom p {
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+}
+
+.bottom ul {
+    width: 174px;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
+}
+
+.bottom ul li a {
+    color: #FFFFFF;
+    font-size: 14px;
+    line-height: 21px;
 }
