--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ h2 {
 }
 
 @media (max-width:768px) {
-    .section3 li  {
+    .section3 li {
         max-width: 100%;
     }
 }
@@ -538,12 +538,18 @@ h2 {
 
 .contact {
     background: #FBF2F2;
-    padding: 80px 0;
+    padding: 80px 36px;
 }
 
 .contact>div {
     margin: 0 auto;
-    width: 636px
+    width: 636px;
+}
+
+@media (max-width:768px) {
+    .contact>div {
+        max-width: 576px;
+    }
 }
 
 .contact h2 {
@@ -556,7 +562,6 @@ h2 {
 }
 
 .contact .description {
-    width: 636px;
     font-size: 20px;
     line-height: 30px;
     color: #000000;
@@ -582,7 +587,14 @@ input {
     background: #FBF2F2;
     outline-color: #AA0601;
     caret-color: #AA0601;
+}
 
+@media (max-width:768px) {
+
+    textarea,
+    input {
+        max-width: 576px;
+    }
 }
 
 ::placeholder {
@@ -632,9 +644,16 @@ label[for="checkbox"] {
     line-height: 24px;
     color: #FFFFFF;
     display: block;
-    padding: 16px 176px;
+    padding: 16px 0;
     background: #AA0601;
     text-align: center;
+}
+
+@media (max-width:768px) {
+
+    .contact a {
+        max-width: 336px;
+    }
 }
 
 .contact a:hover {
