--- a/style.css
+++ b/style.css
@@ -703,6 +703,14 @@ footer>div {
     height: 48px;
 }
 
+@media (max-width:768px) {
+
+    .sns-menu li {
+        width: 40px;
+        height: 40px;
+    }
+}
+
 .phone,
 .mail {
     display: flex;
@@ -731,7 +739,6 @@ hr {
 .bottom {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
 }
 
 .bottom p {
