--- a/style.css
+++ b/style.css
@@ -283,28 +283,38 @@ h2 {
     margin: 0 auto;
 }
 
+@media (max-width: 991.98px) {
+    .section2>div {
+        max-width: 696px;
+        margin: 0 auto;
+    }
+}
+
 .section2 h2 {
     color: #650300;
     margin-bottom: 24px;
 }
 
 .section2 ul {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 24px;
+}
+
+@media (max-width: 991.98px) {
+    .section2 ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr auto-fit;
+        gap: 24px;
+        justify-items: center;
+    }
 }
 
 .section2 li {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 23.6111%
-}
-
-@media (max-width: 991.98px) {
-    .section2 li {
-        width: 48.2758%;
-    }
 }
 
 .section2 img {
