--- a/style.css
+++ b/style.css
@@ -360,11 +360,21 @@ h2 {
 .section3 ul {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    gap: 24px
+
+    /* display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 24px; */
+}
+
+@media (max-width:991.98px) {
+    .section3 ul {
+        flex-wrap: wrap;
+    }
 }
 
 .section3 li {
-    max-width: 32.0987%;
+    max-width: 416px;
 }
 
 @media (max-width:991.98px) {
@@ -374,7 +384,7 @@ h2 {
 }
 
 .section3 img {
-    width: 100%;
+    max-width: 100%;
     margin-bottom: 8px;
 }
 
@@ -387,7 +397,8 @@ h2 {
 
 .section3 li p {
     color: #AA0601;
-    font-size: 2.5vw;
+    /* font-size: 2.5vw; */
+    font-size: 48px;
     line-height: 72px;
     font-family: "Roboto", "Serif";
     font-style: italic;
