--- a/style.css
+++ b/style.css
@@ -361,8 +361,7 @@ h2 {
     display: flex;
     justify-content: space-between;
     gap: 24px
-
-    /* display: grid;
+        /* display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 24px; */
 }
@@ -489,12 +488,18 @@ h2 {
 
 .section5 {
     background: #FFFFFF;
-    padding: 0 36px;
+    padding: 80px 36px;
 }
 
 .section5>div {
     max-width: 1296px;
-    margin: 80px auto;
+    margin: 0 auto;
+}
+
+@media (max-width:991.98px) {
+    .section5>div {
+        max-width: 696px;
+    }
 }
 
 .section5 h2 {
@@ -503,47 +508,62 @@ h2 {
 }
 
 .section5 ul {
-    display: flex;
-    justify-content: space-between;
-    border-radius: 4px;
+    border-radius: 66px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     gap: 24px;
 }
 
 @media (max-width:991.98px) {
     .section5 ul {
-        flex-wrap: wrap;
-        /* row-gap: 24px;
-        column-gap: 24px; */
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        justify-items: center;
+
     }
 }
 
-.section5 li {
-    max-width: 23.6111%;
+.section5 ul li {
+    border-radius: 4px;
 }
 
 @media (max-width:991.98px) {
-    .section5 li {
-        max-width: 48.27586%;
+    .section5 ul li {
+        border-radius: 4px;
     }
 }
 
-.section5 img {
-    width: 100%;
-    height: auto;
+
+@media (max-width:991.98px) {
+    .section5 li div {
+        max-width: 336px;
+        max-height: 306px;
+    }
 }
 
+
 .section5 img {
-    max-width: 306px;
+    display: block;
+    object-fit:cover;
+    object-position: center center;
+}
+
+@media (max-width:991.98px) {
+    .section5 img {
+        width: 336px;
+        max-height: 306px;
+        border-radius: 4px 4px 0 0;
+    }
 }
 
 .comment-content {
-    max-width: 306px;
     height: 205px;
     padding: 16px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 0 2px 6px #00000029;
+    border-radius: 0 0 4px 4px;
 }
 
 .name {
