--- a/style.css
+++ b/style.css
@@ -463,6 +463,12 @@ h2 {
     margin-bottom: 48px;
 }
 
+@media (max-width: 767.98px) {
+    .section3 h2 {
+        margin-bottom: 24px;
+    }
+}   
+
 .section3>div {
     max-width: 1296px;
     margin: 0 auto;
@@ -473,6 +479,12 @@ h2 {
         max-width: 336px;
     }
 }
+
+@media (max-width: 767.98px) {
+    .section3>div {
+        max-width: 348px;
+    }
+}  
 
 .section3 ul {
     display: flex;
@@ -509,6 +521,12 @@ h2 {
         max-width: 336px;
     }
 }
+
+@media (max-width: 767.98px) {
+    .section3 img {
+        max-width: 348px;
+    }
+} 
 
 
 .section3 li p {
