--- a/style.css
+++ b/style.css
@@ -262,11 +262,10 @@ header ul li a {
 .banner {
     max-width: 100%;
     height: 787px;
+    padding: 0 36px;
     background: url(https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-header.png?raw=true);
     background-size: cover;
     background-position: center;
-    position: relative;
-
 }
 
 @media (max-width: 991.98px) {
@@ -283,76 +282,56 @@ header ul li a {
     }
 }
 
+.banner > div{
+    max-width: 1296px;
+    margin: 0 auto;
+    text-align: right;
+} 
+
 .line1 {
-    position: absolute;
-    top: 296px;
-    right: 16.198%;
     color: #650300;
     font-size: 36px;
     line-height: 54px;
-}
-
-@media (max-width: 991.98px) {
-    .line1 {
-        right: 36px;
-    }
+    padding-top: 296px;
 }
 
 @media (max-width: 767.98px) {
     .line1 {
-        top: 144px;
-        right: 14px;
+        padding-top: 144px;
         font-size: 16px;
         line-height: 24px;
     }
 }
 
 .line2 {
-    position: absolute;
-    top: 350px;
-    right: 16.25%;
     color: #650300;
     font-size: 64px;
     line-height: 96px;
     font-weight: bold;
 }
 
-@media (max-width: 991.98px) {
-    .line2 {
-        right: 37px;
-    }
-}
-
 @media (max-width: 767.98px) {
     .line2 {
-        top: 168px;
-        right: 14px;
         font-size: 24px;
         line-height: 36px;
     }
 }
 
 .buy-button {
-    position: absolute;
-    top: 450px;
-    right: 16.25%;
+    display: block;
+    justify-self:end;
+    width: 104px;
     color: #FFFFFF;
     font-size: 20px;
     line-height: 30px;
     padding: 6px 12px;
     background: #AA0601;
-}
-
-@media (max-width: 991.98px) {
-    .buy-button {
-        right: 37px;
-    }
+    margin-top: 4px;
 }
 
 @media (max-width: 767.98px) {
     .buy-button {
-        top: 212px;
-        right: 14px;
+        padding-bottom: 5px;
     }
 }
 
