--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ header img {
 
 @media (max-width: 767.98px) {
     header img {
-        margin-left: 15px;
+        margin-left: 13px;
     }
 }
 
@@ -279,6 +279,7 @@ header ul li a {
 @media (max-width: 767.98px) {
     .banner {
         height: 396px;
+        padding: 0 13px;
     }
 }
 
@@ -356,7 +357,7 @@ h2 {
 
 @media (max-width: 767.98px) {
     .section2, .section3, .section4, .section5, .contact{
-        padding: 40px 14px 40px 13px;
+        padding: 40px 13px;
     }
 }   
 
@@ -908,7 +909,7 @@ footer {
 
 @media (max-width: 767.98px) {
     footer {
-        padding: 24px 14px 24px 13px;
+        padding: 24px 13px;
     }
 } 
 
