--- a/style.css
+++ b/style.css
@@ -705,10 +705,17 @@ h2 {
     }
 }
 
+@media (max-width: 767.98px) {
+    .section5 li div {
+        max-width: 348px;
+        max-height: 306px;
+    }
+}
+
 .section5 img {
     display: block;
     object-fit:cover;
-    object-position: center center;
+    object-position: center;
 }
 
 @media (max-width:991.98px) {
@@ -716,6 +723,12 @@ h2 {
         width: 336px;
         max-height: 306px;
         border-radius: 4px 4px 0 0;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .section5 img {
+        width: 348px;
     }
 }
 
