--- a/style.css
+++ b/style.css
@@ -849,35 +849,35 @@ textarea {
 }
 
 input[name="checkbox"] {
-    width: 20px;
-    height: 20px;
-    margin: 0;
-    margin-bottom: 0;
-    /* -moz-appearance: none;
-    -webkit-appearance: none;
-    -o-appearance: none; */
-    border-radius: 5px;
-    /* border: 2px solid #000000; */
+    display: none;
+}
+
+label[for="checkbox"]:before{
+    display: inline-block;
+    height: 24px;
+    content: url(img/ic_check_box_outline_blank_24px.png);
+    cursor: pointer;
 }
 
 
-/* input[type=checkbox]:hover {
-    background-color: #000000;
-} */
+input[name="checkbox"]:checked + label[for="checkbox"]:before{
+    content: url(img/check_box_24dp_000000_FILL0_wght400_GRAD0_opsz24.png);
+}
 
 input[type=checkbox]:visited {
     color: red;
 }
 
-/* input[type=checkbox]:checked:after{
-    background-color: blue;
-} */
-
-label[for="checkbox"] {
-    display: inline;
-    vertical-align:top;
-    margin-left: 4px;
+label[for="checkbox"]{
+    cursor: pointer;
     margin-bottom: 0;
+}
+
+
+label[for="checkbox"]{
+    display: flex;
+    align-items:flex-start;
+    gap: 4px;
 }
 
 .contact button {
