--- a/style.css
+++ b/style.css
@@ -977,6 +977,7 @@ footer>div {
     color: #FFFFFF;
     font-size: 16px;
     line-height: 24px;
+    padding: 12px 0;
 }
 
 @media (max-width: 767.98px) {
