--- a/style.css
+++ b/style.css
@@ -322,6 +322,8 @@ header ul li a {
     font-size: 64px;
     line-height: 96px;
     font-weight: bold;
+    margin-bottom: 4px;
+
 }
 
 @media (max-width: 769px) {
@@ -332,13 +334,13 @@ header ul li a {
 }
 
 .buy-button {
+    display: inline-block;
     width: 104px;
     color: #FFFFFF;
     font-size: 20px;
     line-height: 30px;
     padding: 6px 12px;
     background: #AA0601;
-    margin-top: 4px;
 }
 
 @media (max-width: 769px) {
